--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             font-size: 1em;
             font-weight: 500;
             transition: color 0.3s;
-            padding: 5px 10px;
+            padding: 0px 10px;
             border-radius: 5px;
         }
 
@@ -346,7 +346,7 @@
         <nav class="nav-menu">
             <div class="nav-logos">
                 <img src="images/MR-logo.jpg" alt="MediaTek Research">
-                <img src="images/NTU-logo.png" style="height: 45px;" alt="NTU">
+                <img src="images/ntu-logo.png" style="height: 45px;" alt="NTU">
             </div>
             <ul>
                 <li><a href="#tldr">TL;DR</a></li>
