--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             right: 0;
             background: rgba(255, 255, 255, 1.00);
             backdrop-filter: blur(10px);
-            padding: 10px 40px;
+            padding: 0px 40px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             z-index: 1000;
             display: flex;
@@ -434,7 +434,7 @@
             <div class="figure">
                 <img src="images/hourglass_arch.png" 
                      alt="Figure 1: Hourglass MLP Architecture"
-                     style="width: 72%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);"
+                     style="width: 60%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15)"
                      id="figure1">
                 <div class="figure-caption">
                     <strong>Figure 1:</strong> (a) Illustration of a wide-narrow-wide MLP block. The two endpoints z<sub>i</sub> and z<sub>i+1</sub> have a higher dimensionality compared to the hidden h<sub>i</sub>. <P></P>
@@ -496,7 +496,7 @@
             
             <div class="figure">
                 <img src="images/gc_demo.png" 
-                    style="width: 55%; height: auto;">
+                    style="width: 40%; height: auto;">
                 <div class="figure-caption">
                     <strong>Figure 2a:</strong> Generative classification task on MNIST requires a model to take in an input digit image and generates a prototypical digit image.
                     <!-- Samples predicted by the proposed Hourglass model. -->
@@ -505,7 +505,7 @@
 
             <div class="figure">
                 <img src="images/mnist_gc.png" 
-                    style="width: 35%; height: auto;">
+                    style="width: 25%; height: auto;">
                 <div class="figure-caption">
                     <strong>Figure 2b:</strong> Performance-complexity Pareto front of Genearative Classification Task on MNIST.
                 </div>
@@ -518,12 +518,12 @@
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 15px;">
                     <div>
                         <img src="images/mnist_denoising.png" 
-                            style="width: 68%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);">
+                            style="width: 55%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);">
                         <p style="text-align: center; margin-top: 10px; font-size: 0.9em; color: #666;">(a) MNIST</p>
                     </div>
                     <div>
                         <img src="images/imagenet32_denoising.png"
-                            style="width: 68%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);">
+                            style="width: 55%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);">
                         <p style="text-align: center; margin-top: 10px; font-size: 0.9em; color: #666;">(b) ImageNet-32</p>
                     </div>
                 </div>
@@ -536,12 +536,12 @@
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 15px;">
                     <div>
                         <img src="images/mnist_super_resolution.png" 
-                            style="width: 68%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);">
+                            style="width: 55%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);">
                         <p style="text-align: center; margin-top: 10px; font-size: 0.9em; color: #666;">(a) MNIST</p>
                     </div>
                     <div>
                         <img src="images/imagenet32_super_resolution.png" 
-                            style="width: 68%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);">
+                            style="width: 55%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);">
                         <p style="text-align: center; margin-top: 10px; font-size: 0.9em; color: #666;">(b) ImageNet-32</p>
                     </div>
                 </div>
@@ -570,7 +570,7 @@
             <div class="figure">
                 <img src="images/comparison_imagenet_freeze_in.png" 
                     alt="Figure 5: Fixed vs Trainable Projection"
-                     style="width: 68%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);"
+                     style="width: 60%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);"
                     id="figure5">
                 <div class="figure-caption">
                     <strong>Figure 5:</strong> Comparison between fixed and trainable input projection W<sub>in</sub> for Hourglass MLP with (d<sub>z</sub>, d<sub>h</sub>, L) = (3546, 270, 5) on ImageNet-32 denoising.
@@ -614,7 +614,7 @@
             <div class="figure">
                 <img src="images/250924_hourglass_LLM.png" 
                      alt="Figure 7: Transformer Extension"
-                     style="width: 72%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);"
+                     style="width: 60%; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);"
                      id="figure7">
                 <div class="figure-caption">
                     <strong>Figure 7:</strong> Extend the wide-narrow-wide intuition to the transformer. (a) Classic transformer block. (b) Modified transformer block with wide-narrow-wide FFNs.
