--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
     <title>Rethinking the Shape Convention of an MLP</title>
     <style>
+        html {
+            scroll-behavior: smooth;
+            scroll-padding-top: 82px;  /* 導航列高度 + 一些空間 */
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -343,7 +348,6 @@
 </head>
 <body>
     <div class="container">
-        <!-- 導航選單 -->
         <nav class="nav-menu">
             <div class="nav-logos">
                 <img src="images/MR-logo-2.jpg" style="height: 45px"; alt="MediaTek Research">
@@ -354,7 +358,7 @@
                 <li><a href="#hourglass_mlp">Hourglass MLP</a></li>
                 <li><a href="#experiments">Experiments</a></li>
                 <li><a href="#projection">Input Projection Analysis</a></li>
-                <li><a href="#discussion">Discussion & Future Work</a></li>
+                <li><a href="#discussion">Discussions & Future Work</a></li>
             </ul>
         </nav>
         <header>
