--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <div class="container">
         <nav class="nav-menu">
             <div class="nav-logos">
-                <img src="images/MR-logo-2.jpg" style="height: 45px"; alt="MediaTek Research">
+                <img src="images/MR-logo-3.png" style="height: 38px"; alt="MediaTek Research">
                 <img src="images/ntu-logo.png" style="height: 45px"; alt="NTU">
             </div>
             <ul>
