--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <style>
         html {
             scroll-behavior: smooth;
-            scroll-padding-top: 82px;  /* 導航列高度 + 一些空間 */
+            /* scroll-padding-top: 82px;  導航列高度 + 一些空間 */
+            scroll-padding-top: 41px;
         }
 
         * {
@@ -36,7 +37,8 @@
             color: #333;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
-            font-size: 15px;
+            /* font-size: 15px; */
+            font-size: 8px;
             padding-top: 60px;
         }
         
